--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 	<title></title>
 </head>
 <body>
-	<a href="GenYoutube.net_How_to_Create_Download_Link_in_HTML5__Making_Direct_Downloadable_Button_for_Any_File_Type.mp4" download="tutorial">Download</a>
+	<a href="outsourcing2.pdf" download="tutorial">Download</a>
 </body>
 </html>
