changed the value of the download attribute

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 	<title></title>
 </head>
 <body>
-	<a href="outsourcing2.pdf" download="tutorial">Download</a>
+	<a href="outsourcing2.pdf" download="outsourcing-web-projects">Download</a>
 </body>
 </html>
